Implement test module Implement in memory provider module Add unit tests to core module