@@ -9,6 +9,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>idempotency-core</module>
+        <module>providers/idempotency-inmemory</module>
+        <module>idempotency-test</module>
     </modules>
     <version>0.0.1-SNAPSHOT</version>
     <description>Parent POM for IDP project</description>
@@ -19,7 +21,30 @@
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
         <spotless-maven-plugin.version>3.3.0</spotless-maven-plugin.version>
+        <junit-jupiter.version>5.11.4</junit-jupiter.version>
+        <assertj.version>3.27.7</assertj.version>
+        <mockito.version>5.14.2</mockito.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit-jupiter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <pluginManagement>
@@ -41,6 +66,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
+                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                         <useModulePath>false</useModulePath>
                         <failIfNoTests>true</failIfNoTests>
                         <includes>
